--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,5 +28,11 @@ body {
 
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 4rem;
+}
+
+@media (min-width: 640px) {
+  html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 4rem;
+  }
 }
