--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,5 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -12,12 +7,44 @@
   --font-mono: var(--font-geist-mono);
 }
 
+/* ---------------- LIGHT THEME ---------------- */
+
+:root {
+  /* Define actual theme values as design tokens */
+  --light-background: #ffffff;
+  --light-foreground: #171717;
+  --light-secondary-background: #201c74;
+
+  --dark-background: #0A0A72;
+  --dark-foreground: #ededed;
+  --dark-secondary-background: #201c74;
+
+  /* Default to light theme (used when no system or user override) */
+  --background: var(--light-background);
+  --foreground: var(--light-foreground);
+  --secondary-background: var(--light-secondary-background);
+}
+
+/* If system prefers dark theme */
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0A0A72;
-    --secondary-background: #201c74;
-    --foreground: #ededed;
+    --background: var(--dark-background);
+    --foreground: var(--dark-foreground);
+    --secondary-background: var(--dark-secondary-background);
   }
+}
+
+/* If user explicitly sets theme */
+[data-theme='dark'] {
+  --background: var(--dark-background);
+  --foreground: var(--dark-foreground);
+  --secondary-background: var(--dark-secondary-background);
+}
+
+[data-theme='light'] {
+  --background: var(--light-background);
+  --foreground: var(--light-foreground);
+  --secondary-background: var(--light-secondary-background);
 }
 
 body {
